# fastapi-blog-example

./: .pdm-python  pyproject.toml
src/: main.py
src/database/: model.py
src/routers/: auth.py  blog.py  user.py
src/schemas/: request.py  response.py
src/utils/: oauth2.py  token.py
