[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kevin Chueh", email = "slime21023@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.26.0",
    "sqlalchemy>=2.0.25",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
